--- a/back-end/Gemfile
+++ b/back-end/Gemfile
@@ -1,7 +1,9 @@
 source 'https://rubygems.org'
 
-# gem 'rails', github: "rails/rails"
-gem 'rails', path: "../../../rails"
+gem 'rails', github: "rails/rails"
+
+# Use only with local rails git repos
+# gem 'rails', path: "../../../rails"
 gem 'sprockets-rails', github: "rails/sprockets-rails"
 gem 'arel', github: "rails/arel"
 
